force-app/main/default/objects/redwing__Achievement_Assignment__c/redwing__Achievement_Assignment__c.object-meta.xml
<CustomObject>
    <label>Achievement Assignment</label>
    <nameField>
        <displayFormat>AAS-{0000000}</displayFormat>
        <label>Achievement Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievement Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>