force-app/main/default/objects/redwing__Achievement_Assignment__c/fields/redwing__Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Acquisition_Date__c</fullName>
    <label>Acquisition Date</label>
    <type>Date</type>
</CustomField>