force-app/main/default/objects/redwing__Achievement_Assignment__c/fields/redwing__Contact__c.field-meta.xml
<CustomField>
    <fullName>redwing__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Achievement Assignments</relationshipLabel>
    <relationshipName>Achievement_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>