force-app/main/default/objects/redwing__Achievement_Assignment__c/fields/redwing__Number_Of_Renewals__c.field-meta.xml
<CustomField>
    <fullName>redwing__Number_Of_Renewals__c</fullName>
    <inlineHelpText>Amount of renewals for the particular Achievement Assignment record. If the field is empty, it means the user has not initiated the renewal yet.</inlineHelpText>
    <label>Number of Renewals</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>