force-app/main/default/objects/redwing__Achievement_Assignment__c/fields/redwing__Renewal_Window_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Renewal_Window_Close_Date__c</fullName>
    <inlineHelpText>Date when renewal window will be closed for the user.</inlineHelpText>
    <label>Renewal Window Close Date</label>
    <type>Date</type>
</CustomField>