force-app/main/default/objects/redwing__Achievement_Assignment__c/fields/redwing__Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Acquired</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>