force-app/main/default/objects/redwing__Achievement_Assignment__c/fields/redwing__Training_Track__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Trac</label>
    <referenceTo>redwing__Training_Track__c</referenceTo>
    <relationshipLabel>Achievement Assignments</relationshipLabel>
    <relationshipName>Achievement_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>